# VUJudge

./: .env.dist  README.md  justfile  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_created_at_remove_user_fullname_and_more.py
core/: settings.py  urls.py
judge/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
judge/migrations/: 0001_initial.py  0002_rename_name_language_language.py  0002_testcase_case_no.py  0003_alter_testcase_case_no.py  0003_language_name_alter_language_language.py  0004_alter_problem_difficulty.py  0004_remove_problem_difficulty_and_more.py  0005_alter_problem_difficulty.py  0006_problem_space_limit_problem_time_limit_and_more.py  0007_alter_contest_is_open_alter_contest_start_time_and_more.py  0008_testcasesubmission_success.py  0009_remove_contest_is_open_contest_is_public_and_more.py  0010_remove_problem_space_limit_problem_memory_limit.py  0011_language.py  0012_problemsubmission_language_alter_language_args.py  0013_alter_problemsubmission_language.py  0014_language_active.py  0015_problemsubmission_user_solution.py  0016_alter_testcase_problem.py  0017_rename_base_problem_testcasesubmission_base_submission.py  0018_problemsubmission_status.py  0019_alter_problemsubmission_status.py  0020_testcasesubmission_test.py  0021_remove_testcasesubmission_test.py  0022_alter_testcasesubmission_base_submission.py  0023_problemsubmission_submitted_at.py  0024_alter_problemsubmission_options_problem_penalty_time.py  (+4 more)
templates/: base.html
(+12 files in other folders)
