[project]
name = "vujudge"
version = "0.1.0"
description = "VUJudge is an online judge platform developed for the Varendra University Programming Club (VUPC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-allauth>=65.0.2",
    "django-import-export>=4.2.0",
    "django-unfold>=0.40.0",
    "django>=5.1.2",
    "httpx>=0.27.2",
    "icecream>=2.1.3",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
]
